--- a/composer.json
+++ b/composer.json
@@ -9,12 +9,14 @@
     "license": "MIT",
     "require": {
         "php": "^7.3|^8.0",
+        "beyondcode/laravel-websockets": "^1.12",
         "fideloper/proxy": "^4.4",
         "fruitcake/laravel-cors": "^2.0",
         "guzzlehttp/guzzle": "^7.0.1",
         "laravel/framework": "^8.12",
         "laravel/tinker": "^2.5",
         "nuwave/lighthouse": "^5.1",
+        "pusher/pusher-php-server": "~3.0",
         "tcg/voyager": "^1.4"
     },
     "require-dev": {
