--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "dependencies": {
         "apollo-boost": "^0.4.9",
         "graphql": "^15.4.0",
+        "laravel-echo": "^1.10.0",
+        "pusher-js": "^7.0.3",
         "vue": "^2.6.12",
         "vue-apollo": "^3.0.5"
     }
